--- a/src/Components/Button.css
+++ b/src/Components/Button.css
@@ -13,7 +13,7 @@
     border-radius: 3px;
     font-family: inherit;
     font-size: inherit;
-    transition: all 0.4s cubic-bezier(1,-0.16,.6,1.35);
+    transition: all 0.15s cubic-bezier(1,-0.16,.6,1.35);
     cursor: pointer;
 }
 
@@ -22,7 +22,8 @@
 }
 
 .btn:hover{
-    background-color: #f5d3ae;
+    background-image: linear-gradient(#252525, black);
+  color: white;
 }
 
 .btn:active, .btn:focus{
