--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,7 +1,6 @@
 .Footer {
   border-top: thick double #f4ddc4;
   padding: 20px;
-  margin: 50px 0 0 0;
 }
 .Footer__top {
   display: flex;
@@ -21,6 +20,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  padding: 0 10px;
 }
 .Footer ul{
 display: flex;
