--- a/src/Components/ItemList.css
+++ b/src/Components/ItemList.css
@@ -1,18 +1,24 @@
-img{
-    width: 250px;
-    height: 250px;
+.item_container > img {
+  width: 250px;
+  height: 250px;
+  border: 3px solid #f5d3ae;
+  opacity: 0.8;
 }
-.item{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+.item_container > img:hover {
+  opacity: 1;
 }
-.item_container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 280px;
-    margin: 10px 20px;
+.item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0 0 50px 0;
+}
+.item_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+  margin: 10px 20px;
 }
