--- a/src/pages/Welcome.css
+++ b/src/pages/Welcome.css
@@ -2,8 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding: 50px 0;
-  margin: 100px 0;
+  padding: 70px 0;
+  background-image: url("../img/bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   border-image: linear-gradient(90deg, #f4ddc4 -70%, #10121b 50%, #f4ddc4 170%)
     1;
   border-style: solid;
@@ -20,7 +23,7 @@
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  margin: 0 40px;
+  margin: 0 20px;
 }
 
 .Welcome__title {
@@ -54,11 +57,15 @@
 }
 .Welcome__button {
   display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-evenly;
 }
 .Welcome__btn {
+  align-self: center;
   background-image: linear-gradient(#f5ddc1, #7f6d5f);
   color: #151516;
-  width: 350px;
+  min-width: 120px;
   font-size: 16px;
   font-weight: 600;
   line-height: 16px;
@@ -74,18 +81,9 @@
   background-image: linear-gradient(#252525, black);
   color: white;
 }
-.img__decor {
-  height: 30px;
-  width: 100%;
-}
-.img__decor__left,
-.img__decor__right {
-  height: 30px;
-  width: 100%;
-}
 .img__welcome {
   margin: 0 0 20px 0;
-  width: fit-content;
+  width: 350px;
   border-radius: 50%;
   border: 3px solid #95785c;
 }
