--- a/src/Components/ItemList.css
+++ b/src/Components/ItemList.css
@@ -1,11 +1,27 @@
+.title {
+  padding: 2rem 0;
+  text-align: center;
+}
+.item_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+  margin: 20px 20px;
+  cursor: pointer;
+}
 .item_container > img {
   width: 250px;
   height: 250px;
   border: 3px solid #f5d3ae;
   opacity: 0.8;
+  transition: all 0.3s ease-in-out;
+  border-radius: 5px;
 }
 .item_container > img:hover {
   opacity: 1;
+  transform: scale(1.05);
 }
 .item {
   display: flex;
@@ -14,11 +30,16 @@
   flex-wrap: wrap;
   padding: 0 0 50px 0;
 }
-.item_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 280px;
-  margin: 10px 20px;
+h2 {
+  font-size: 2rem;
+  font-weight: 200;
+  margin: 1rem 0;
+}
+h2:hover {
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  color: #f4ddc4;
+}
+p {
+  color: rgba(255, 255, 255, 0.596);
 }
