--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -96,3 +96,18 @@ form {
   background-image: linear-gradient(#252525, black);
   color: white;
 }
+
+
+@media (max-width: 1024px){
+  .Contact__container {
+    flex-direction:column-reverse;
+    padding: 30px 0;
+  }
+  .Contact__left{
+    width: auto;
+  }
+  .Contact__right {
+    width: auto;
+    margin: 20px 20px 80px 20px;
+}
+}
