--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -43,6 +43,10 @@
   width: 100%;
   height: 40px;
 }
+#phone::-webkit-outer-spin-button,
+#phone::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
 input,
 textarea {
   width: 50%;
